# nanoGPT-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml
.github/workflows/: cmake-multi-platform.yml
src/: dataloader.cpp  dataloader.h  main.cpp  model.cpp  model.h
